@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}         

class TableController {
    - _tableRepository: ITableRepository
    + UpdateTable(Guid id, UpdateTableRequestDTO updateTable) : Task<IActionResult> 
}

interface ITableRepository<<interface>>  {
    + UpdateTable(Guid id, UpdateTableRequestDTO updateTable) : Task<GetTableResponseDTO> 
}

class TableRepository {
    - _tableDao: TableDAO
    + UpdateTable(Guid id, UpdateTableRequestDTO updateTable) : Task<GetTableResponseDTO>
}

class TableDAO {
    - _client: Client
    + UpdateTable(Guid id, UpdateTableRequestDTO updateTable) : Task<GetTableResponseDTO>
    + GetTableById(Guid id) : Task<GetTableResponseDTO>
}


class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}


class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableController
TableController -- ITableRepository
ITableRepository <|-- TableRepository
TableRepository -- TableDAO
TableDAO -- Table
TableDAO -- TableType

@enduml
